CV Assignment has been completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
       <b>
-         <centre> CIRCULUM VITAE </centre>
+         <h1>   
+            <center>
+                CIRCULUM VITAE 
+            </center>
+         </h1>
                  <h1> AHMED RAZA </h1>    
                  Address:E-261 Qasba Colony Karachi Pakistan<br>
                  <h2> OBJECTIVE </h2>
